Change comparison preview URL to match frontend
